--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Next assignment is Due Oct 11th. <a href="assts/asst06.html">Assignment 06: Secret Messages</a></p>
+<p>Next assignment is Due Oct 25th. <a href="assts/asst07.html">Assignment 07: Some Assembly Required</a></p>
 </li>
 <li>
-<p>Lab Oct 10: <a href="studyguide3.html">Study Guide for Quiz 3</a></p>
+<p><strong>Quiz 03</strong> Oct 24: <a href="studyguide3.html">Study Guide for Quiz 3</a></p>
 </li>
 <li>
 <p>Our final exam will be <strong>self-scheduled</strong> during the period Dec 15-20, 2024.</p>
@@ -265,7 +265,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">5</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Oct 1,3 <a id="week05"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Binary and Data Representation I</strong></p>
+<p><strong>Binary and Data Representation</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -285,7 +285,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">6</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Oct 8, 10 <a id="week06"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Binary and Data Representation II, Intro to Assembly</strong></p>
+<p><strong>Assembly</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -294,6 +294,9 @@ on lecture content, worksheets, and assignments.</p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/##_assembly_chapter">Chapter 6</a></p>
+</li>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_x64_assembly_chapter">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
 </li>
 <li>
 <p><a href="assts/asst06.html">Assignment 06</a>: Due Oct 10</p>
@@ -322,15 +325,15 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">8</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Oct 22, 24 <a id="week07"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Assembly</strong></p>
+<p><strong>The operating system, Processes</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_x64_assembly_chapter">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13, skip section 13.3</a></p>
 </li>
 <li>
-<p><a href="assts/asst07.html">Assignment 07</a>: Due Oct 24</p>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due Oct 24 <strong>Hardcopy due at Park 200B</strong></p>
 </li>
 <li>
 <p>Lab Oct 24: <strong>Quiz 03</strong></p>
@@ -342,15 +345,18 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">9</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Oct 29,31 <a id="week09"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>The operating system, Processes</strong></p>
+<p><strong>Threads I</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13, skip section 13.3</a></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_some_advanced_c_features">Section 2.9.3, 2.9.4 (void* andpointer arithmetic)</a></p>
 </li>
 <li>
-<p><a href="assts/asst08.html">Assignment 08</a>: Due Oct 31 <strong>Hardcopy due at Park 200B</strong></p>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
+</li>
+<li>
+<p><a href="assts/asst08.html">Assignment 08</a>: Due Oct 31</p>
 </li>
 <li>
 <p>Lab: Practice Quiz 04 <a href="studyguide4.html">Study Guide: Quiz 04</a></p>
@@ -362,18 +368,15 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">10</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Nov 5, 7 <a id="week10"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads I</strong></p>
+<p><strong>Threads II</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
+</li>
+<li>
 <p>Nov 5: NO CLASS. ELECTION Day</p>
-</li>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13.4-13.6</a></p>
-</li>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_some_advanced_c_features">Section 2.9.3, 2.9.4 (void* andpointer arithmetic)</a></p>
 </li>
 <li>
 <p><a href="assts/TODO.html">Assignment 09</a>: Due Nov 7</p>
@@ -388,13 +391,10 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">11</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Nov 12, 14 <a id="week11"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads II</strong></p>
+<p><strong>Threads III</strong></p>
 </div>
 <div class="ulist">
 <ul>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
-</li>
 <li>
 <p><a href="assts/TODO.html">Assignment 10</a>: Due Nov 14th</p>
 </li>
@@ -408,7 +408,7 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">12</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Nov 19,21 <a id="week12"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads III</strong></p>
+<p><strong>Threads IV</strong></p>
 </div>
 <div class="ulist">
 <ul>
@@ -431,10 +431,13 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Nov 26 <a id="week13"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Threads IV</strong></p>
+<p><strong>Code optimization</strong></p>
 </div>
 <div class="ulist">
 <ul>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
+</li>
 <li>
 <p>Nov 28: Thanksgiving, NO CLASS</p>
 </li>
@@ -445,15 +448,12 @@ on lecture content, worksheets, and assignments.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Dec 3,5 <a id="week14"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Memory, Code optimization</strong></p>
+<p><strong>Memory</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy">Chapter 11.1-11.3</a></p>
-</li>
-<li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
 </li>
 <li>
 <p><a href="assts/asst12.html">Assignment 12</a>: Due Dec 5</p>
@@ -900,7 +900,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-06 15:58:24 -0400
+Last updated 2024-10-17 10:04:57 -0400
 </div>
 </div>
 </body>
