--- a/studyguide3.html
+++ b/studyguide3.html
@@ -247,7 +247,7 @@ to give feedback on your responses.</p>
 <p>to a signed integer</p>
 </li>
 <li>
-<p>to an 24-bit RGBA color, e.g. consider each byte as a value for red, green, blue, and alpha</p>
+<p>to an 24-bit RGBA color, e.g. consider each byte as a value for red, green, and blue</p>
 </li>
 <li>
 <p>to an ASCII character string</p>
@@ -421,7 +421,7 @@ Your new number: 0x6d (109)</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-08-27 09:58:07 -0400
+Last updated 2024-10-10 15:27:31 -0400
 </div>
 </div>
 </body>
