--- a/assts/asst09.html
+++ b/assts/asst09.html
@@ -28,6 +28,9 @@
 <h2 id="_assignment_09_follow_the_thread">Assignment 09: Follow the thread</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p><strong>Due Friday, November 8 before midnight</strong></p>
+</div>
+<div class="paragraph">
 <p>The goals for this assignment are:</p>
 </div>
 <div class="ulist">
@@ -228,7 +231,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 10:55:08 -0400
+Last updated 2024-10-17 13:21:51 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
