--- a/assts/asst10.html
+++ b/assts/asst10.html
@@ -31,6 +31,9 @@
 <h2 id="_assignment_10_mandelbrot_set">Assignment 10: Mandelbrot Set</h2>
 <div class="sectionbody">
 <div class="paragraph">
+<p><strong>Due Friday, November 15th, before midnight</strong></p>
+</div>
+<div class="paragraph">
 <p>The goals for this assignment are:</p>
 </div>
 <div class="ulist">
@@ -428,7 +431,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 11:07:23 -0400
+Last updated 2024-10-17 13:22:20 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
