--- a/assts/asst12.html
+++ b/assts/asst12.html
@@ -20,10 +20,11 @@
 <li><a href="#_mylloc_list">3. mylloc_list</a></li>
 <li><a href="#_memory_statistics">4. Memory statistics</a>
 <ul class="sectlevel2">
-<li><a href="#_readme_due_april_19th_in_class">4.1. README (<strong>Due April 19th in class</strong>)</a></li>
+<li><a href="#_readme_due_in_class_as_a_hardcopy">4.1. README (<strong>Due in class as a hardcopy</strong>)</a></li>
 </ul>
 </li>
 <li><a href="#_submit_your_work">5. Submit your work</a></li>
+<li><a href="#_grading_rubric">6. Grading Rubric</a></li>
 </ul>
 </div>
 </div>
@@ -31,6 +32,9 @@
 <div class="sect1">
 <h2 id="_assignment_12_hold_on_to_your_memories">Assignment 12: Hold on to your memories</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>Due Friday, December 8th, before midnight. <strong>Written portion is due in class, December 7th</strong></p>
+</div>
 <div class="paragraph">
 <p>The goals for this assignment are:</p>
 </div>
@@ -91,7 +95,7 @@
 <p>your code, and</p>
 </li>
 <li>
-<p>a written report, <strong>due in class, April 12th</strong></p>
+<p>a written report, <strong>due in class</strong></p>
 </li>
 </ul>
 </div>
@@ -313,7 +317,7 @@ Time is 4.1e-05</code></pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_readme_due_april_19th_in_class">4.1. README (<strong>Due April 19th in class</strong>)</h3>
+<h3 id="_readme_due_in_class_as_a_hardcopy">4.1. README (<strong>Due in class as a hardcopy</strong>)</h3>
 <div class="paragraph">
 <p>Read this section and answer the corresponding questions. We will visualize the execution of <code>memstats.c</code> for Round 1.
 When the program starts, we have no buffers allocated and the free list is empty.</p>
@@ -394,10 +398,80 @@ $ git status</code></pre>
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_grading_rubric">6. Grading Rubric</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><strong>Assignment rubrics</strong></p>
+</div>
+<div class="paragraph">
+<p>Grades are out of 4 points.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>(2 points) mylloc_list</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(1.9 points) passes all tests</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>(1 points) memstats</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(0.9 points) correct output</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>(1 points) Readme</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><strong>Code rubrics</strong></p>
+</div>
+<div class="paragraph">
+<p>For full credit, your C programs must be feature-complete, robust (e.g. run without memory errors or crashing) and
+have good style.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Some credit lost for missing features or bugs, depending on severity of error</p>
+</li>
+<li>
+<p>-5% for style errors. See the <a href="../codingstandard.html">class coding style</a> here.</p>
+</li>
+<li>
+<p>-50% for memory errors</p>
+</li>
+<li>
+<p>-100% for failure to checkin work to Github</p>
+</li>
+<li>
+<p>-100% for failure to compile on linux using make</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 11:08:34 -0400
+Last updated 2024-10-17 13:49:07 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
