--- a/schedule.html
+++ b/schedule.html
@@ -501,7 +501,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Lab Sept 12: Quiz 01 practice, <a href="studyguide1.html">Study Guide: Quiz 01</a></p>
 </li>
 <li>
-<p><a href="assts/asst02.html">Assignment 02</a>: Sept 12</p>
+<p><a href="assts/asst02.html">Assignment 02</a>: Sept 13</p>
 </li>
 </ul>
 </div></div></td>
@@ -524,7 +524,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Lab Sept 19: <strong>Quiz 01</strong></p>
 </li>
 <li>
-<p><a href="assts/asst03.html">Assignment 03</a>: Due September 19</p>
+<p><a href="assts/asst03.html">Assignment 03</a>: Due September 20</p>
 </li>
 </ul>
 </div></div></td>
@@ -550,7 +550,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Sept 26 Lab: Quiz 02 Practice, <a href="studyguide2.html">Study Guide: Quiz 02</a></p>
 </li>
 <li>
-<p><a href="assts/asst04.html">Assignment 04</a>: Due September 26</p>
+<p><a href="assts/asst04.html">Assignment 04</a>: Due September 27</p>
 </li>
 </ul>
 </div></div></td>
@@ -567,7 +567,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_binary_and_data_representation">Chapter 4.1-4.9</a></p>
 </li>
 <li>
-<p><a href="assts/asst05.html">Assignment 05</a>: Due Oct 3</p>
+<p><a href="assts/asst05.html">Assignment 05</a>: Due Oct 4</p>
 </li>
 <li>
 <p>Lab Oct 3:  <strong>Quiz 02</strong></p>
@@ -593,7 +593,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_x64_assembly_chapter">Chapter 7 (7.1-7.3,7.5,7.10), 10</a></p>
 </li>
 <li>
-<p><a href="assts/asst06.html">Assignment 06</a>: Due Oct 10</p>
+<p><a href="assts/asst06.html">Assignment 06</a>: Due Oct 11</p>
 </li>
 <li>
 <p>Lab Oct 10: Practice Quiz 03, <a href="studyguide3.html">Study Guide 3</a></p>
@@ -627,7 +627,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_the_operating_system">Chapter 13, skip section 13.3</a></p>
 </li>
 <li>
-<p><a href="assts/asst07.html">Assignment 07</a>: Due Oct 24 <strong>Hardcopy due at Park 200B</strong></p>
+<p><a href="assts/asst07.html">Assignment 07</a>: Due Oct 25 <strong>Hardcopy due at Park 200B</strong></p>
 </li>
 <li>
 <p>Lab Oct 24: <strong>Quiz 03</strong></p>
@@ -650,7 +650,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst08.html">Assignment 08</a>: Due Oct 31</p>
+<p><a href="assts/asst08.html">Assignment 08</a>: Due Nov 1</p>
 </li>
 <li>
 <p>Lab: Practice Quiz 04 <a href="studyguide4.html">Study Guide: Quiz 04</a></p>
@@ -673,10 +673,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Nov 5: NO CLASS. ELECTION Day</p>
 </li>
 <li>
-<p><a href="assts/TODO.html">Assignment 09</a>: Due Nov 7</p>
+<p><a href="assts/asst09.html">Assignment 09</a>: Due Nov 8</p>
 </li>
 <li>
-<p>Lab:  <strong>Quiz 04</strong></p>
+<p>Lab: <strong>Quiz 04</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -690,7 +690,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="assts/TODO.html">Assignment 10</a>: Due Nov 14th</p>
+<p><a href="assts/asst10.html">Assignment 10</a>: Due Nov 14th</p>
 </li>
 <li>
 <p>Lab: Quiz Practice, <a href="studyguide5.html">Study Guide 5</a></p>
@@ -713,7 +713,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/TODO.html">Assignment 11</a>: Due Nov 21</p>
+<p><a href="assts/asst11.html">Assignment 11</a>: Due Nov 21</p>
 </li>
 <li>
 <p>Lab: <strong>Quiz 05</strong></p>
@@ -725,12 +725,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Nov 26 <a id="week13"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Code optimization</strong></p>
+<p><strong>Malloc</strong></p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
+<p>Read:"My malloc: mylloc and mhysa" by Johan Montelius</p>
 </li>
 <li>
 <p>Nov 28: Thanksgiving, NO CLASS</p>
@@ -762,10 +762,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Dec 10,12 <a id="week15"></a></p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>C++</strong></p>
+<p><strong>Code Optimization, C++</strong></p>
 </div>
 <div class="ulist">
 <ul>
+<li>
+<p>Read: <a href="https://diveintosystems.org/singlepage/#_code_optimization">Chapter 12</a></p>
+</li>
 <li>
 <p>Lab Dec 5, Final Practice, <a href="studyguide-final.html">Final Study Guide</a></p>
 </li>
@@ -777,7 +780,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 10:03:45 -0400
+Last updated 2024-10-17 13:35:51 -0400
 </div>
 </div>
 </body>
