--- a/assts/asst11.html
+++ b/assts/asst11.html
@@ -17,6 +17,7 @@
 <li><a href="#_assignment_11_buddhabrot">Assignment 11: Buddhabrot</a></li>
 <li><a href="#_buddhabrot">1. Buddhabrot</a></li>
 <li><a href="#_submit_your_work">2. Submit your work</a></li>
+<li><a href="#_grading_rubric">3. Grading Rubric</a></li>
 </ul>
 </div>
 </div>
@@ -24,6 +25,9 @@
 <div class="sect1">
 <h2 id="_assignment_11_buddhabrot">Assignment 11: Buddhabrot</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p><strong>Due Friday, November 22nd, before midnight</strong></p>
+</div>
 <div class="paragraph">
 <p>The goals for this assignment are:</p>
 </div>
@@ -302,10 +306,83 @@ $ git status</code></pre>
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_grading_rubric">3. Grading Rubric</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><strong>Assignment rubrics</strong></p>
+</div>
+<div class="paragraph">
+<p>Grades are out of 4 points.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>(2 points) Mandelbrot</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(0.4 points)</p>
+</li>
+<li>
+<p>(0.5 points) no memory errors</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>(2 points) Threaded Mandelbrot</p>
+<div class="ulist">
+<ul>
+<li>
+<p>(0.1 points) style and header comment</p>
+</li>
+<li>
+<p>(1.4 points)</p>
+</li>
+<li>
+<p>(1.5 points) no memory errors</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p><strong>Code rubrics</strong></p>
+</div>
+<div class="paragraph">
+<p>For full credit, your C programs must be feature-complete, robust (e.g. run without memory errors or crashing) and
+have good style.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Some credit lost for missing features or bugs, depending on severity of error</p>
+</li>
+<li>
+<p>-5% for style errors. See the <a href="../codingstandard.html">class coding style</a> here.</p>
+</li>
+<li>
+<p>-50% for memory errors</p>
+</li>
+<li>
+<p>-100% for failure to checkin work to Github</p>
+</li>
+<li>
+<p>-100% for failure to compile on linux using make</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 11:03:46 -0400
+Last updated 2024-10-17 13:27:09 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
