--- a/assts/asst11.html
+++ b/assts/asst11.html
@@ -228,7 +228,7 @@ Writing file: buddhabrot-480-1650141479.ppm</code></pre>
 <div class="ulist">
 <ul>
 <li>
-<p>You can re-use your PPM and mandelbrot functions from A09. You should re-use your implementation for read/write PPM as well.</p>
+<p>You can re-use your PPM and mandelbrot functions from A10. You should re-use your implementation for read/write PPM as well.</p>
 </li>
 <li>
 <p>Each thread should run all three steps on a quadrant of the image.</p>
@@ -318,33 +318,20 @@ $ git status</code></pre>
 <div class="ulist">
 <ul>
 <li>
-<p>(2 points) Mandelbrot</p>
+<p>(4 points) Threaded Buddhabrot</p>
 <div class="ulist">
 <ul>
 <li>
-<p>(0.1 points) style and header comment</p>
+<p>(0.4 points) style and header comment</p>
 </li>
 <li>
-<p>(0.4 points)</p>
+<p>(0.4 points) Generated image with correct filename</p>
 </li>
 <li>
-<p>(0.5 points) no memory errors</p>
-</li>
-</ul>
-</div>
+<p>(1.2 points) Correct output, thread coordination, and output performance statistics</p>
 </li>
 <li>
-<p>(2 points) Threaded Mandelbrot</p>
-<div class="ulist">
-<ul>
-<li>
-<p>(0.1 points) style and header comment</p>
-</li>
-<li>
-<p>(1.4 points)</p>
-</li>
-<li>
-<p>(1.5 points) no memory errors</p>
+<p>(2.0 points) no memory errors</p>
 </li>
 </ul>
 </div>
@@ -382,7 +369,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 13:27:09 -0400
+Last updated 2024-10-17 13:53:29 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
