--- a/assts/asst11.html
+++ b/assts/asst11.html
@@ -328,7 +328,10 @@ $ git status</code></pre>
 <p>(0.4 points) Generated image with correct filename</p>
 </li>
 <li>
-<p>(1.2 points) Correct output, thread coordination, and output performance statistics</p>
+<p>(0.2 points) Supports given command line arguments</p>
+</li>
+<li>
+<p>(1.0 points) Correct output, thread coordination, and output performance statistics</p>
 </li>
 <li>
 <p>(2.0 points) no memory errors</p>
@@ -369,7 +372,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 13:53:29 -0400
+Last updated 2024-10-17 13:55:21 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
