--- a/index.html
+++ b/index.html
@@ -521,6 +521,9 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="https://www.gnu.org/software/make/manual/html_node/Introduction.html">Makefiles</a></p>
 </li>
 <li>
+<p><a href="https://makefiletutorial.com/">Makefile Tutorial</a></p>
+</li>
+<li>
 <p><a href="http://linuxcommand.org/lc3_learning_the_shell.php">Learning the shell</a></p>
 </li>
 </ul>
@@ -903,7 +906,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 10:04:57 -0400
+Last updated 2024-10-18 09:19:52 -0400
 </div>
 </div>
 </body>
