--- a/assts/asst11.html
+++ b/assts/asst11.html
@@ -194,7 +194,28 @@ threads.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre></pre>
+<pre>$ **make ./tree_tests**
+gcc -g -Wall -Wvla -Werror -Wno-unused-variable -Wno-unused-but-set-variable tree_tests.c tree.c -o tree_tests -lpthread
+$ **./tree_tests**
+Running tests...
+test 1: insert for empty tree: PASSED
+test 2: name set correctly: PASSED
+test 3: left is null: PASSED
+test 4: right is null: PASSED
+test 5: name set correctly: PASSED
+test 6: right is null: PASSED
+test 7: name set correctly: PASSED
+test 8: item not in tree: PASSED
+test 9: item in tree: PASSED
+test 10: found correct object: PASSED
+M
+ l:A
+ r:X
+  l:P
+A
+M
+P
+X</pre>
 </div>
 </div>
 <div class="paragraph">
@@ -215,16 +236,59 @@ threads.</p>
 <h3 id="_dependencies">2.2. Dependencies</h3>
 <div class="paragraph">
 <p>A <em>dependency</em> is a general software term for any software required by another. In this question,
-we will analyze dependencies between files, as determined by <code>#include</code> statements. For example,
-the file "Animal.h" depends on "string.h". We can represent such dependencies using a graph, where
-nodes represent files and directed edges represent dependencies. With this representation, a node
-with no outgoing edges has no dependencies.</p>
+we will store files in a binary search tree so we can list their file dependencies,
+as determined by <code>#include</code> statements. For example,
+the file "Animal.h" depends on "Locomotion.h".</p>
 </div>
 <div class="paragraph">
 <p>In the file, <code>dependency.c</code>, implement a program that uses N threads to build a binary search tree of a
-given set of files. The nodes of the binary search tree should also contain a list of dependencies that
-point to other nodes in the tree. This data structure should make it easy to look up a file by name and
-then trace through the dependencies between files.</p>
+given set of files. After building the tree, the program should give the user a prompt where they
+can list the processed files in alphabetical order and then query the dependencies of the file by
+giving the filename.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>$ <strong>./dependency 3 <code>find code -name "<strong>.h" -o -name "</strong>.cpp"</code></strong>
+Processing 11 files
+Thread 0 processing 4 files (arguments 2 to 6)
+Thread 1 processing 4 files (arguments 6 to 10)
+Thread 2 processing 3 files (arguments 10 to 13)
+Elapsed time is 0.000496
+$ list
+code/Animal.h
+code/Bird.h
+code/Duck.h
+code/Fish.h
+code/Fly.h
+code/Locomotion.h
+code/Seal.h
+code/Swim.h
+code/Walk.h
+code/Whale.h
+code/Zoo.cpp
+$ code/Animal.cpp
+code/Animal.cpp not found
+$ code/Animal.h
+code/Animal.h has the following dependencies
+  string
+  vector
+  Locomotion.h
+$ code/Zoo.cpp
+code/Zoo.cpp has the following dependencies
+  Animal.h
+  Bird.h
+  Duck.h
+  Fish.h
+  Seal.h
+  Whale.h
+  Locomotion.h
+  Walk.h
+  Fly.h
+  Swim.h
+$ apple
+apple not found
+$ quit</pre>
+</div>
 </div>
 <div class="paragraph">
 <p>Requirements:</p>
@@ -232,7 +296,28 @@ then trace through the dependencies between files.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Use a mutex to avoid race conditions when setting up the tree and graph data structures</p>
+<p>Check that a file is valid before adding it to the tree</p>
+</li>
+<li>
+<p>Support the commands: quit, list, &lt;filename&gt;</p>
+</li>
+<li>
+<p>Use a mutex to avoid race conditions when setting up the tree</p>
+</li>
+<li>
+<p>Your program should take the number of threads and a list of files as command line arguments</p>
+</li>
+<li>
+<p>Subdivide the files among the N threads. Note that the number of files may not divide evenly between threads.</p>
+</li>
+<li>
+<p>Use a mutex to ensure that threads do not have a race conditions when constructing the tree</p>
+</li>
+<li>
+<p>Use <code>strstr</code> and <code>fgets</code> to parse the source file and find lines containing <code>#include</code></p>
+</li>
+<li>
+<p>Strip the filenames from the <code>#include</code> lines when printing dependencies.</p>
 </li>
 </ul>
 </div>
@@ -273,46 +358,58 @@ $ git status</code></pre>
 <div class="ulist">
 <ul>
 <li>
-<p>(1 points) Grep</p>
+<p>(1.5 points) Grep</p>
 <div class="ulist">
 <ul>
 <li>
-<p>(0.1 points) style and header comment</p>
+<p>(0.15 points) style and header comment</p>
 </li>
 <li>
-<p>(0.4 points)</p>
+<p>(0.1 points) Correct command line arguments: number of threads, keyword, and a list of files</p>
 </li>
 <li>
-<p>(0.5 points) no memory errors</p>
+<p>(0.2 points) Subdivide the files among the N threads</p>
+</li>
+<li>
+<p>(0.3 points) Correct output, uses mutex</p>
+</li>
+<li>
+<p>(0.75 points) no memory errors</p>
 </li>
 </ul>
 </div>
 </li>
 <li>
-<p>(1 points) Tree</p>
+<p>(1.5 points) Tree</p>
 <div class="ulist">
 <ul>
 <li>
-<p>(0.1 points) style and header comment</p>
+<p>(0.15 points) style and header comment</p>
 </li>
 <li>
-<p>(0.9 points)</p>
+<p>(0.6 points) implements all functions, passes all tests and does not modify basecode</p>
 </li>
 <li>
-<p>(1 points) no memory errors</p>
+<p>(0.75 points) no memory errors</p>
 </li>
 </ul>
 </div>
 </li>
 <li>
-<p>(2 points) Dependencies</p>
+<p>(1 points) Dependency</p>
 <div class="ulist">
 <ul>
 <li>
 <p>(0.1 points) style and header comment</p>
 </li>
 <li>
-<p>(0.4 points)</p>
+<p>(0.1 points) Correct command line arguments: number of threads, keyword, and a list of files</p>
+</li>
+<li>
+<p>(0.1 points) Subdivide the files among the N threads, builds tree using multiple threads using mutex</p>
+</li>
+<li>
+<p>(0.2 points) Correct behavior</p>
 </li>
 <li>
 <p>(0.5 points) no memory errors</p>
@@ -353,7 +450,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-18 12:50:17 -0400
+Last updated 2024-10-18 15:48:49 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
