--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst11.html">Assignment 11</a>: Due Nov 21</p>
+<p><a href="assts/asst11.html">Assignment 11</a>: Due Dec 1 (No extensions)</p>
 </li>
 <li>
 <p>Lab: <strong>Quiz 05</strong></p>
