--- a/schedule.html
+++ b/schedule.html
@@ -713,7 +713,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
 </li>
 <li>
-<p><a href="assts/asst11.html">Assignment 11</a>: Due Nov 21</p>
+<p><a href="assts/asst11.html">Assignment 11</a>: Due Dec 1 (No extensions)</p>
 </li>
 <li>
 <p>Lab: <strong>Quiz 05</strong></p>
@@ -780,7 +780,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 13:35:51 -0400
+Last updated 2024-10-18 15:50:34 -0400
 </div>
 </div>
 </body>
