--- a/assts/asst11.html
+++ b/assts/asst11.html
@@ -188,7 +188,8 @@ threads.</p>
 <h3 id="_tree">2.1. Tree</h3>
 <div class="paragraph">
 <p>In the file, <code>tree.c</code>, implement a binary search tree. Do not change the header
-<code>tree.h</code>, nor the function declarations in <code>tree.c</code>. We recommend using the book
+<code>tree.h</code>, nor the function declarations in <code>tree.c</code>. But you can add functions to <code>tree.c</code>!
+We recommend using the book
 "Data Structures and Algorithm Analysis in C" by Mark Allen Weiss. See the
 <a href="../index.html">course webpage for a link</a>.</p>
 </div>
@@ -224,7 +225,7 @@ X</pre>
 <div class="ulist">
 <ul>
 <li>
-<p>You must not modify the basecode for <code>tree.h</code> or <code>tree.c</code></p>
+<p>You must not modify the basecode for <code>tree.h</code> or <code>tree.c</code>, except to add functions to <code>tree.c</code></p>
 </li>
 <li>
 <p>Your output should match the above and pass all tests</p>
@@ -450,7 +451,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-18 15:48:49 -0400
+Last updated 2024-10-18 15:54:19 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
