--- a/assts/asst08.html
+++ b/assts/asst08.html
@@ -160,6 +160,18 @@ $ <strong>./warmup</strong>
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
+<code>readline</code> is a package that is installed on goldengate and in our labs. However, you may need to install it on your own machine. On Unix systems, this can be done by running <code>sudo apt install libreadline-dev</code>
+</td>
+</tr>
+</table>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
 You can print with colors to the console using ANSI escape sequences (see below).
 For example, <code>printf(ANSI_COLOR_GREEN "Green Text" ANSI_COLOR_RESET);</code> will print green text. <a href="https://azrael.digipen.edu/~mmead/www/mg/ansicolors/index.html">Here is a good guide!</a>
 </td>
@@ -332,7 +344,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-19 11:25:23 -0400
+Last updated 2024-10-23 13:51:46 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
