--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Next assignment is Due Oct 25th. <a href="assts/asst07.html">Assignment 07: Some Assembly Required</a></p>
+<p>Next assignment is Due Nov 1st. <a href="assts/asst08.html">Assignment 08: Trust the Process</a></p>
 </li>
 <li>
-<p><strong>Quiz 03</strong> Oct 24: <a href="studyguide3.html">Study Guide for Quiz 3</a></p>
+<p><strong>Quiz 04</strong> Nov 7: <a href="studyguide4.html">Study Guide for Quiz 4</a></p>
 </li>
 <li>
 <p>Our final exam will be <strong>self-scheduled</strong> during the period Dec 15-20, 2024.</p>
@@ -906,7 +906,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-18 09:19:52 -0400
+Last updated 2024-10-30 11:41:10 -0400
 </div>
 </div>
 </body>
