--- a/assts/asst09.html
+++ b/assts/asst09.html
@@ -45,30 +45,18 @@
 </ul>
 </div>
 <h3 id="_update_your_repository" class="discrete">Update your repository</h3>
-<div class="paragraph">
-<p>Do a <strong>fetch upstream</strong> to obtain the basecode for this assignment.</p>
-</div>
-<div class="paragraph">
-<p>Using the command line</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Open terminal and change your current directory to your assignment repository.</p>
-</li>
-<li>
-<p>Run the command <code>git fetch upstream</code></p>
-</li>
-<li>
-<p>Run the command <code>git merge upstream/master</code></p>
-</li>
-</ul>
-</div>
-<div class="paragraph">
-<p>Your repository should now contain a new folder named <code>A09</code>.</p>
-</div>
-<div class="paragraph">
-<p>The <code>fetch</code> and <code>merge</code> commands update your repository with any changes from the original.</p>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Do a <strong>SYNC FORK</strong> to obtain the basecode for this assignment.
+This is a button on your Github repository.
+</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
@@ -468,7 +456,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-18 15:59:08 -0400
+Last updated 2024-11-05 16:50:02 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
