--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Next assignment is Due Nov 1st. <a href="assts/asst08.html">Assignment 08: Trust the Process</a></p>
+<p>Next assignment is Due Nov 8st. <a href="assts/asst09.html">Assignment 09: Mandelthreads</a></p>
 </li>
 <li>
 <p><strong>Quiz 04</strong> Nov 7: <a href="studyguide4.html">Study Guide for Quiz 4</a></p>
@@ -906,7 +906,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-30 11:41:10 -0400
+Last updated 2024-11-05 16:50:28 -0500
 </div>
 </div>
 </body>
