--- a/index.html
+++ b/index.html
@@ -58,13 +58,19 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Next assignment is Due Nov 8st. <a href="assts/asst09.html">Assignment 09: Mandelthreads</a></p>
+<p>Next assignment is Due Nov 8st. <a href="assts/asst10.html">Assignment 10: Buddhabrot</a></p>
 </li>
 <li>
-<p><strong>Quiz 04</strong> Nov 7: <a href="studyguide4.html">Study Guide for Quiz 4</a></p>
+<p><strong>Quiz 05</strong> Nov 21: <a href="studyguide5.html">Study Guide for Quiz 5</a></p>
 </li>
 <li>
 <p>Our final exam will be <strong>self-scheduled</strong> during the period Dec 15-20, 2024.</p>
+</li>
+<li>
+<p>Final Exam Review Session: Dec 16th, 11:40am-1:00pm, Park 230.</p>
+</li>
+<li>
+<p>Additional office hours: Dec 17th, 11:40am-1:00pm, Park 200A.</p>
 </li>
 </ul>
 </div>
@@ -906,7 +912,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-05 16:50:28 -0500
+Last updated 2024-11-09 14:56:15 -0500
 </div>
 </div>
 </body>
