--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 <p><strong>Quiz 05</strong> Nov 21: <a href="studyguide5.html">Study Guide for Quiz 5</a></p>
 </li>
 <li>
+<p><strong>NO CLASS</strong> Nov 21! We will still have the quiz in lab.</p>
+</li>
+<li>
 <p>Our final exam will be <strong>self-scheduled</strong> during the period Dec 15-20, 2024.</p>
 </li>
 <li>
@@ -419,7 +422,7 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Nov 21, NO CLASS</p>
+<p>Nov 21, NO CLASS!!</p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
@@ -912,7 +915,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-09 14:56:15 -0500
+Last updated 2024-11-09 15:55:34 -0500
 </div>
 </div>
 </body>
