--- a/schedule.html
+++ b/schedule.html
@@ -707,7 +707,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Nov 21, NO CLASS</p>
+<p>Nov 21, NO CLASS!!</p>
 </li>
 <li>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era">Chapter 14</a></p>
@@ -780,7 +780,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-18 15:50:34 -0400
+Last updated 2024-11-09 15:55:28 -0500
 </div>
 </div>
 </body>
