--- a/assts/asst11.html
+++ b/assts/asst11.html
@@ -55,12 +55,15 @@
 <p>Do a <strong>fetch upstream</strong> to obtain the basecode for this assignment.</p>
 </div>
 <div class="paragraph">
-<p>Using the command line</p>
+<p>Using the command line, make sure that you have the correct upstream repository and do a fetch upstream to get the basecode for this assignment.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p>Open terminal and change your current directory to your assignment repository.</p>
+</li>
+<li>
+<p><code>git remote set-url upstream <a href="mailto:git@github.com">git@github.com</a>:brynmawr-cs223-f24/cs223-assignments.git</code></p>
 </li>
 <li>
 <p>Run the command <code>git fetch upstream</code></p>
@@ -451,7 +454,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-18 15:54:19 -0400
+Last updated 2024-11-17 16:29:51 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
