--- a/assts/asst08.html
+++ b/assts/asst08.html
@@ -260,22 +260,19 @@ $ git status</code></pre>
 <p>(0.1 points) style and header comment</p>
 </li>
 <li>
-<p>(1.4 points) Displays unique prompt with current working directory</p>
+<p>(0.7 points) Displays unique prompt with current working directory</p>
 </li>
 <li>
-<p>Uses <code>readline()</code> and <code>add_history()</code></p>
+<p>(0.3 points) Uses <code>readline()</code> and <code>add_history()</code></p>
 </li>
 <li>
-<p>Quits when the user types <code>exit</code>.</p>
+<p>(0.1 points) Quits when the user types <code>exit</code>.</p>
 </li>
 <li>
-<p>Forks a process to run the user&#8217;s command.</p>
+<p>(0.1 points) Forks a process to run the user&#8217;s command.</p>
 </li>
 <li>
-<p>Reports the return status of the command when the child process completes.</p>
-</li>
-<li>
-<p>Has a unique prompt appearance</p>
+<p>(0.1 points) Reports the return status of the command when the child process completes.</p>
 </li>
 <li>
 <p>(1.5 points) no memory errors.</p>
@@ -344,7 +341,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-23 13:51:46 -0400
+Last updated 2024-11-18 10:22:02 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
