--- a/assts/asst11.html
+++ b/assts/asst11.html
@@ -198,9 +198,9 @@ We recommend using the book
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>$ **make ./tree_tests**
+<pre>$ <strong>make ./tree_tests</strong>
 gcc -g -Wall -Wvla -Werror -Wno-unused-variable -Wno-unused-but-set-variable tree_tests.c tree.c -o tree_tests -lpthread
-$ **./tree_tests**
+$ <strong>./tree_tests</strong>
 Running tests...
 test 1: insert for empty tree: PASSED
 test 2: name set correctly: PASSED
@@ -454,7 +454,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-17 16:29:51 -0500
+Last updated 2024-11-26 16:22:28 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
