--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="ulist anns">
 <ul>
 <li>
-<p>Next assignment is Due Dec 1st. <a href="assts/asst11.html">Assignment 11: We others fear to thread</a></p>
+<p>Next assignment is Due Dec 1st. <a href="assts/asst11.html">Assignment 11: Where others fear to thread</a></p>
 </li>
 <li>
 <p><strong>Quiz 05</strong> Nov 21: <a href="studyguide5.html">Study Guide for Quiz 5</a></p>
@@ -915,7 +915,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-17 16:26:59 -0500
+Last updated 2024-11-26 16:23:33 -0500
 </div>
 </div>
 </body>
