--- a/assts/asst11.html
+++ b/assts/asst11.html
@@ -91,7 +91,7 @@ in a list of source files. We use the <code>find</code> command to generate the 
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>$ <strong>grep public <code>find code -name "*.h"</code></strong>
+<pre>$ <strong>grep public &#x0065;find code -name "*.h"``</strong>
 code/Seal.h:class Seal : public Animal
 code/Seal.h:public:
 code/Walk.h:class Walk : public Locomotion
@@ -454,7 +454,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-27 09:53:20 -0500
+Last updated 2024-11-27 09:55:34 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
