--- a/assts/asst12.html
+++ b/assts/asst12.html
@@ -33,7 +33,7 @@
 <h2 id="_assignment_12_hold_on_to_your_memories">Assignment 12: Hold on to your memories</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Due Friday, December 8th, before midnight. <strong>Written portion is due in class, December 7th</strong></p>
+<p>Due Friday, December 6th, before midnight. <strong>Written portion is due December 5th - no late work accepted</strong></p>
 </div>
 <div class="paragraph">
 <p>The goals for this assignment are:</p>
@@ -471,7 +471,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-10-17 13:49:07 -0400
+Last updated 2024-11-30 12:29:09 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
