--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 <p>Next assignment is Due Dec 1st. <a href="assts/asst11.html">Assignment 11: Where others fear to thread</a></p>
 </li>
 <li>
-<p><strong>Quiz 05</strong> Nov 21: <a href="studyguide5.html">Study Guide for Quiz 5</a></p>
+<p>Last assignment is Due Dec 5th (written - no late work accepted) and 6th. <a href="assts/asst12.html">Assignment 12: Hold on to your memories</a></p>
 </li>
 <li>
-<p><strong>NO CLASS</strong> Nov 21! We will still have the quiz in lab.</p>
+<p>Lab Dec 5th: We work on the written part of assignment 12.</p>
 </li>
 <li>
 <p>Our final exam will be <strong>self-scheduled</strong> during the period Dec 15-20, 2024.</p>
@@ -465,7 +465,7 @@ on lecture content, worksheets, and assignments.</p>
 <p>Read: <a href="https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy">Chapter 11.1-11.3</a></p>
 </li>
 <li>
-<p><a href="assts/asst12.html">Assignment 12</a>: Due Dec 5</p>
+<p><a href="assts/asst12.html">Assignment 12</a>: Due Dec 6</p>
 </li>
 <li>
 <p>Lab Dec 5, Final Practice, <a href="studyguide-final.html">Final Study Guide</a></p>
@@ -915,7 +915,7 @@ t cheat</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-26 16:23:33 -0500
+Last updated 2024-11-30 12:28:39 -0500
 </div>
 </div>
 </body>
