--- a/assts/asst11.html
+++ b/assts/asst11.html
@@ -224,7 +224,7 @@ giving the filename.</p>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>$ <strong>./dependency 3 <code><code></code>find code -name "<strong>.h" -o -name "</strong>.cpp"<code></code></code></strong>
+<pre>$ <strong>./dependency 3 <code> ` </code>find code -name "<strong>.h" -o -name "</strong>.cpp"<code> ` </code></strong>
 Processing 11 files
 Thread 0 processing 4 files (arguments 2 to 6)
 Thread 1 processing 4 files (arguments 6 to 10)
@@ -426,7 +426,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-30 12:21:28 -0500
+Last updated 2024-12-03 13:05:50 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
