--- a/assts/asst12.html
+++ b/assts/asst12.html
@@ -440,6 +440,18 @@ $ git status</code></pre>
 </li>
 </ul>
 </div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+valgrind won&#8217;t work for this assignment. You do not need to check for memory errors on this assignment.
+</td>
+</tr>
+</table>
+</div>
 <div class="paragraph">
 <p><strong>Code rubrics</strong></p>
 </div>
@@ -456,9 +468,6 @@ have good style.</p>
 <p>-5% for style errors. See the <a href="../codingstandard.html">class coding style</a> here.</p>
 </li>
 <li>
-<p>-50% for memory errors</p>
-</li>
-<li>
 <p>-100% for failure to checkin work to Github</p>
 </li>
 <li>
@@ -471,7 +480,7 @@ have good style.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-11-30 12:29:09 -0500
+Last updated 2024-12-06 14:19:41 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
